# vision_proc_networks

./: .gitignore  PIPELINE.md  main.py  pyproject.toml
src/eda/: cornet_analysis.ipynb  cornet_test.ipynb  eeg_utils.py  face_regressor_analysis.ipynb  yolo_demo.py
src/eda/decoding/: decoding_demo.ipynb
src/eda/nn_models/: cornet_full_run.ipynb  cornet_utils.py  face_alignment.ipynb  faces_eda.ipynb  glm_utils.py  model_comparison.ipynb  resnet_utils.py  yunet_utils.py
