[project]
name = "vision-proc-networks"
version = "0.1.0"
description = "dissertation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "Pillow",
    "jupyter",
    "ipykernel",
    "seaborn",
    "rsatoolbox",
    "scipy>=1.17.1",
    "mne>=1.12.1",
    "opencv-python>=4.13.0.92",
    "loguru>=0.7.3",
    "xgboost>=3.2.0",
    "ultralytics>=8.4.69",
    "imageio-ffmpeg>=0.6.0",
    "lap>=0.5.13",
]
